--- a/Frontend/src/app/shared/layout/headers/public-header/public-header.component.scss
+++ b/Frontend/src/app/shared/layout/headers/public-header/public-header.component.scss
@@ -7,6 +7,10 @@
     padding: 15px $grid-margin-width;
     height: 70px;
     width: 100%;
+
+    @include media("<tablet-large"){
+        background-color: white;
+    }
 }
 
 .glass{
@@ -27,6 +31,7 @@
 }
 
     .fishbook-logo-wrapper{
+        @include noselect;
         cursor: pointer;
     }
 
@@ -73,45 +78,58 @@
         }
     }
 
-.overlay{
-    position: absolute;
-    z-index: 101;
-    height: calc(100% - 70px);
-    background-color: rgba(34, 34, 34, 0.5);
-    visibility: visible;
-    opacity: 1;
-    transition: visibility 0.2s ease-in-out, opacity 0.3s ease-in-out;
+.mobile-nav{
+
+    @include media(">=tablet-large"){
+        display: none !important;
+    }
 }
 
-    .hidden-overlay{
+    .overlay{
+        position: fixed;
+        z-index: 100;
+        top: 70px;
+        height: calc(100% - 70px);
+        width: 100%;
         visibility: hidden;
         opacity: 0;
+        background-color: rgba(34, 34, 34, 0.5);
+        transition: all 300ms ease-in;
     }
 
-    .menu-container{
+    .overlay.overlay-visible{
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .nav-items-mobile{
+        position: fixed;
         background-color: white;
-        animation: expand-width 0.3s ease-in-out forwards;
+        position: fixed;
+        z-index: 101;
+        width: 30%;
+        height: calc(100% - 70px);
+        top: 70px;
+        right: 0;
+        padding: 0 $grid-margin-width 20px 20px;
+        transform: scale(0, 1);
+        transform-origin: right;
+        transition: all 300ms ease-in;
+
+        @include media("<phone-large"){
+            width: 80%;
+        }
     }
 
-    @keyframes expand-width {
-        0% {
-            width: 0%;
-        }
-        100% {
-            width: 50%;
-            
-        }
+    .nav-items-mobile.nav-items-mobile-visible{
+        transform: scale(1, 1);
     }
 
-        .nav-items-menu{
-            display: flex;
-            flex-direction: column;
+        .nav-item-mobile{
+            @include noselect;
+            text-align: right;
+            color: color(lightblue);
+            cursor: pointer;
+            margin-bottom: 10px;
         }
-
-            .nav-item-menu{
-                margin-bottom: 10px;
-                margin-right: $grid-margin-width;
-                color: color(lightblue);
-                cursor: pointer;
-            }
 
